edit .gitignore and test views

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ standardEC2.yml
 logs/
 media/
 media/uploads/
+otozeus/__pycache__/
+otozeusapp/__pycache__/
+otozeusapp/migrations/__pycache__/
+db.sqlite3
